--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,7 @@ import Projects from '../components/home/Projects.astro';
   .hero-img {
     height: 750px;
     overflow: hidden;
-    background: url('../images/hero.jpg') no-repeat center;
+    background: url('./assets/hero.jpg') no-repeat center;
     background-size: cover;
 
     margin-bottom: 5rem;
