Changed url format to background images

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -22,7 +22,7 @@ import ContactHero from '../components/contact/ContactHero.astro';
 <style>
   .services-img {
     background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-      url(./assets/contacts-hero.jpg);
+      url(../../public/assets/contacts-hero.jpg);
     height: 60vh;
     background-size: cover;
     background-attachment: fixed;
