--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -30,7 +30,7 @@ import Layout from '../layouts/Layout.astro';
             <img
               src={project.image}
               alt={project.description}
-              class="my-2 rounded-3xl shadow-md sm:my-6"
+              class="my-6 rounded-3xl shadow-md "
             />
           ))
         }
