Adjusted some css styles

--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -1,37 +1,42 @@
 <section class="py-12">
-  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
-    <div class="grid gap-12 sm:gap-28 lg:grid-cols-2">
-      <div class="flex flex-col items-start gap-8 sm:gap-10 lg:col-span-1">
-        <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">About Us</h2>
-        <p class="text-base text-primary-950/70 dark:text-primary-200/70 sm:text-lg">
-          I believe we live in an environment where most consumers are resourceful and well-informed
-          (albeit overwhelmed!) thanks to social media and technology. I see my purpose as listening
-          to a client's ideas and then bringing to the table perspective and context, as well as a
-          holistic view, by applying sound design principles. True to its name, by reFlair-ing, my
-          aim is to offer guidance and services on the subject of flair - and I would like to once
-          again add flair to your home.
-        </p>
-        <a
-          href="/about"
-          class="inline-flex items-center justify-center rounded-full border border-transparent bg-primary-600 px-5 py-3 text-base font-medium text-white transition hover:bg-primary-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600 dark:bg-primary-400 dark:text-primary-950 dark:hover:bg-primary-300 dark:focus-visible:outline-primary-400"
-        >
-          Read about us
-        </a>
-      </div>
-      <div class="wrap flex lg:col-span-1">
-        <img
-          src="/assets/lappies.webp"
-          alt="flour theme fabrics stacked in a pile"
-          class="rounded-3xl"
-        />
-      </div>
-    </div>
+ <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+  <div class="grid gap-12 sm:gap-28 lg:grid-cols-2">
+   <div class="flex flex-col items-start gap-8 sm:gap-10 lg:col-span-1">
+    <h2 class="text-3xl font-medium tracking-tight sm:text-5xl">About Us</h2>
+    <p class="text-lg text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
+     Thanks to social media and the internet, I believe most of us are influenced and educated to
+     such an extent that we are able to make well-informed choices when it comes to furnishing our
+     spaces. Therefore the question, why consult an interior designer? I see my purpose as listening
+     to a client's needs and ideas and then aligning those plans with sound design principles - to
+     arrive at a point where everyone is happy. I love working with what people already have, and by
+     bringing to the table a little imagination and balancing it with perspective and context, an
+     old or existing ensemble has the potential to feel fresh again. True to its name, by
+     <span class="font-['FuturaBold']">re</span>Flair-ing my aim is to offer guidance and services <span
+      class="font-['FuturaBold']">on the subject of</span
+     > flair - and I would like to <span class="font-['FuturaBold']">once again</span> add flair to
+     your home.
+    </p>
+    <a
+     href="/about"
+     class="text-md inline-flex items-center justify-center rounded-full border border-transparent bg-primary-600 px-5 py-3 font-medium text-white transition hover:bg-primary-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600 dark:bg-primary-400 dark:text-primary-950 dark:hover:bg-primary-300 dark:focus-visible:outline-primary-400"
+    >
+     Read about us
+    </a>
+   </div>
+   <div class="wrap flex lg:col-span-1">
+    <img
+     src="/assets/lappies.webp"
+     alt="flour theme fabrics stacked in a pile"
+     class="rounded-3xl"
+    />
+   </div>
   </div>
+ </div>
 </section>
 
 <style>
-  .wrap {
-    align-self: center;
-    flex: 0 0 auto;
-  }
+ .wrap {
+  align-self: center;
+  flex: 0 0 auto;
+ }
 </style>
