--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,89 +1,115 @@
 ---
-import '@fontsource/inter/latin-400.css';
-import '@fontsource/inter/latin-500.css';
 import { ViewTransitions } from 'astro:transitions';
 import Footer from '../components/layout/Footer.astro';
 import Header from '../components/layout/Header.astro';
 
 interface Props {
-  description: string;
-  title: string;
+ description: string;
+ title: string;
 }
 
 const { description, title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" x-cloak x-data :class="{ 'dark': $store.theme.isDark }">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <meta name="generator" content={Astro.generator} />
-    <meta name="description" content={description} />
-    <title>{title}</title>
-    <ViewTransitions />
-  </head>
-  <body
-    class="bg-primary-50 text-primary-950 antialiased transition dark:bg-primary-950 dark:text-primary-200"
-  >
-    <Header />
-    <main>
-      <slot />
-    </main>
-    <Footer />
+<html lang="en" x-cloak x-data :class="{ 'dark': true }">
+ <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
-    <style is:global>
-      [x-cloak] {
-        display: none !important;
+  <meta name="generator" content={Astro.generator} />
+  <meta name="description" content={description} />
+  <title>{title}</title>
+  <ViewTransitions />
+ </head>
+ <body
+  class="bg-primary-50 text-primary-950 antialiased transition dark:bg-primary-950 dark:text-primary-200"
+ >
+  <Header />
+  <main>
+   <slot />
+  </main>
+  <Footer />
+
+  <style is:global>
+   [x-cloak] {
+    display: none !important;
+   }
+   .js-loading *,
+   .js-loading *:before,
+   .js-loading *:after {
+    animation-play-state: paused !important;
+   }
+
+   @font-face {
+    font-family: 'FuturaBold';
+    src: url('/fonts/optifuturademibold-webfont.woff2') format('woff2');
+    src: url('/fonts/optifuturademibold-webfont.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+   }
+   @font-face {
+    font-family: 'SerifBook';
+    src: url('/fonts/sansserifbookflf-webfont.woff2') format('woff2');
+    src: url('/fonts/sansserifbookflf-webfont.woff') format('woff');
+
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+   }
+   @font-face {
+    font-family: 'SerifBookItalic';
+    src: url('/fonts/sansserifbookflf-italic-webfont.woff2') format('woff2');
+    src: url('/fonts/sansserifbookflf-italic-webfont.woff') format('woff');
+
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+   }
+  </style>
+
+  <script>
+   import Alpine from 'alpinejs';
+   import collapse from '@alpinejs/collapse';
+
+   document.body.classList.add('js-loading');
+
+   window.addEventListener('load', showPage);
+
+   function showPage() {
+    document.body.classList.remove('js-loading');
+   }
+
+   Alpine.plugin(collapse);
+
+   Alpine.store('theme', {
+    init() {
+     this.isDark = (() => {
+      if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
+       return localStorage.getItem('theme') === 'dark';
       }
-      .js-loading *,
-      .js-loading *:before,
-      .js-loading *:after {
-        animation-play-state: paused !important;
+      if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+       return true;
       }
-    </style>
+      return false;
+     })();
+    },
 
-    <script>
-      import Alpine from 'alpinejs';
-      import collapse from '@alpinejs/collapse';
+    isDark: false,
 
-      document.body.classList.add('js-loading');
+    toggle() {
+     this.isDark = !this.isDark;
+     localStorage.setItem('theme', this.isDark ? 'dark' : 'light');
+    },
+   });
 
-      window.addEventListener('load', showPage);
-
-      function showPage() {
-        document.body.classList.remove('js-loading');
-      }
-
-      Alpine.plugin(collapse);
-
-      Alpine.store('theme', {
-        init() {
-          this.isDark = (() => {
-            if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
-              return localStorage.getItem('theme') === 'dark';
-            }
-            if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-              return true;
-            }
-            return false;
-          })();
-        },
-
-        isDark: false,
-
-        toggle() {
-          this.isDark = !this.isDark;
-          localStorage.setItem('theme', this.isDark ? 'dark' : 'light');
-        },
-      });
-
-      window.Alpine = Alpine;
-      Alpine.start();
-    </script>
-  </body>
+   window.Alpine = Alpine;
+   Alpine.start();
+  </script>
+ </body>
 </html>
