--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,59 +1,59 @@
 ---
 const links = [
-  {
-    ref: '01',
-    name: 'Home',
-    href: '/',
-  },
-  {
-    ref: '02',
-    name: 'About',
-    href: '/about',
-  },
-  {
-    ref: '03',
-    name: 'Services',
-    href: '/services',
-  },
-  {
-    ref: '04',
-    name: 'Projects',
-    href: '/projects',
-  },
-  {
-    ref: '05',
-    name: 'Contact',
-    href: '/contact',
-  },
+ {
+  ref: '01',
+  name: 'Home',
+  href: '/',
+ },
+ {
+  ref: '02',
+  name: 'About',
+  href: '/about',
+ },
+ {
+  ref: '03',
+  name: 'Services',
+  href: '/services',
+ },
+ {
+  ref: '04',
+  name: 'Projects',
+  href: '/projects',
+ },
+ {
+  ref: '05',
+  name: 'Contact',
+  href: '/contact',
+ },
 ];
 ---
 
 <!-- 'bg-primary-50 dark:bg-primary-950' -->
 <header
-  x-data="{ open: false }"
-  class="header-group transition"
-  :class="{ 'bg-primary-500/10 dark:bg-primary-400/10': open, 'bg-primary-50 dark:bg-primary-950': !(open) }"
+ x-data="{ open: false }"
+ class="header-group transition"
+ :class="{ 'bg-primary-500/10 dark:bg-primary-400/10': open, 'bg-primary-50 dark:bg-primary-950': !(open) }"
 >
-  <div class="mx-auto flex max-w-2xl items-center justify-between px-4 py-4 lg:max-w-7xl lg:px-8">
-    <!-- Brand logo -->
-    <div class="flex">
-      <a
-        href="/"
-        class="rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-primary-950 dark:group-focus-visible:outline-primary-200"
-      >
-        <span class="sr-only">Logo</span>
-        <img
-          class="w-14 sm:w-24"
-          :src="$store.theme.isDark ? '/assets/logo-inverted.webp' : '/assets/logo.webp'"
-          alt="Reflair logo"
-        />
-      </a>
-    </div>
+ <div class="mx-auto flex max-w-2xl items-center justify-between px-4 py-4 lg:max-w-7xl lg:px-8">
+  <!-- Brand logo -->
+  <div class="flex">
+   <a
+    href="/"
+    class="rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-primary-950 dark:group-focus-visible:outline-primary-200"
+   >
+    <span class="sr-only">Logo</span>
+    <img
+     class="w-14 sm:w-24"
+     :src="$store.theme.isDark ? '/assets/logo-inverted.webp' : '/assets/logo.webp'"
+     alt="Reflair logo"
+    />
+   </a>
+  </div>
 
-    <!-- Actions -->
-    <div class="-mr-2 flex items-center space-x-2 sm:space-x-3">
-      <!-- Toggle theme mode -->
-      <button
+  <!-- Actions -->
+  <div class="-mr-2 flex items-center space-x-2 sm:space-x-3">
+   <!-- Toggle theme mode -->
+   <!-- <button
         type="button"
         class="inline-flex h-14 w-14 items-center justify-center rounded-full text-primary-950 ring-primary-950 transition hover:bg-primary-500/10 focus:outline-none focus-visible:ring-2 dark:text-primary-200 dark:hover:bg-primary-400/10"
         x-data
@@ -86,91 +86,91 @@ const links = [
             d="M10 6C10 10.4183 13.5817 14 18 14C19.4386 14 20.7885 13.6203 21.9549 12.9556C21.4738 18.0302 17.2005 22 12 22C6.47715 22 2 17.5228 2 12C2 6.79948 5.9698 2.52616 11.0444 2.04507C10.3797 3.21152 10 4.56142 10 6ZM4 12C4 16.4183 7.58172 20 12 20C14.9654 20 17.5757 18.3788 18.9571 15.9546C18.6407 15.9848 18.3214 16 18 16C12.4772 16 8 11.5228 8 6C8 5.67863 8.01524 5.35933 8.04536 5.04293C5.62119 6.42426 4 9.03458 4 12ZM18.1642 2.29104L19 2.5V3.5L18.1642 3.70896C17.4476 3.8881 16.8881 4.4476 16.709 5.16417L16.5 6H15.5L15.291 5.16417C15.1119 4.4476 14.5524 3.8881 13.8358 3.70896L13 3.5V2.5L13.8358 2.29104C14.5524 2.1119 15.1119 1.5524 15.291 0.835829L15.5 0H16.5L16.709 0.835829C16.8881 1.5524 17.4476 2.1119 18.1642 2.29104ZM23.1642 7.29104L24 7.5V8.5L23.1642 8.70896C22.4476 8.8881 21.8881 9.4476 21.709 10.1642L21.5 11H20.5L20.291 10.1642C20.1119 9.4476 19.5524 8.8881 18.8358 8.70896L18 8.5V7.5L18.8358 7.29104C19.5524 7.1119 20.1119 6.5524 20.291 5.83583L20.5 5H21.5L21.709 5.83583C21.8881 6.5524 22.4476 7.1119 23.1642 7.29104Z"
           ></path>
         </svg>
-      </button>
+      </button> -->
 
-      <!-- Toggle menu -->
-      <button
-        type="button"
-        class="inline-flex h-14 w-14 items-center justify-center rounded-full text-primary-950 ring-primary-950 transition hover:bg-primary-500/10 focus:outline-none focus-visible:ring-2 dark:text-primary-200 dark:hover:bg-primary-400/10"
-        @click="open = !open"
-        @mousedown="if (open) $event.preventDefault()"
-        aria-controls="website-menu"
-        aria-expanded="false"
-        :aria-expanded="open.toString()"
-      >
-        <span class="sr-only">Toggle menu</span>
-        <svg
-          x-cloak
-          class="h-8 w-8"
-          :class="{ 'hidden': open, 'block': !(open) }"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="currentColor"
-          viewBox="0 0 24 24"
-          aria-hidden="true"
-        >
-          <path d="M19 8H5V10H19V8ZM19 14H5V16H19V14Z"></path>
-        </svg>
-        <svg
-          x-cloak
-          class="h-8 w-8"
-          :class="{ 'block': open, 'hidden': !(open) }"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="currentColor"
-          viewBox="0 0 24 24"
-          aria-hidden="true"
-        >
-          <path
-            d="M12.0007 10.5865L16.9504 5.63672L18.3646 7.05093L13.4149 12.0007L18.3646 16.9504L16.9504 18.3646L12.0007 13.4149L7.05093 18.3646L5.63672 16.9504L10.5865 12.0007L5.63672 7.05093L7.05093 5.63672L12.0007 10.5865Z"
-          ></path>
-        </svg>
-      </button>
-    </div>
+   <!-- Toggle menu -->
+   <button
+    type="button"
+    class="inline-flex h-14 w-14 items-center justify-center rounded-full text-primary-950 ring-primary-950 transition hover:bg-primary-500/10 focus:outline-none focus-visible:ring-2 dark:text-primary-200 dark:hover:bg-primary-400/10"
+    @click="open = !open"
+    @mousedown="if (open) $event.preventDefault()"
+    aria-controls="website-menu"
+    aria-expanded="false"
+    :aria-expanded="open.toString()"
+   >
+    <span class="sr-only">Toggle menu</span>
+    <svg
+     x-cloak
+     class="h-8 w-8"
+     :class="{ 'hidden': open, 'block': !(open) }"
+     xmlns="http://www.w3.org/2000/svg"
+     fill="currentColor"
+     viewBox="0 0 24 24"
+     aria-hidden="true"
+    >
+     <path d="M19 8H5V10H19V8ZM19 14H5V16H19V14Z"></path>
+    </svg>
+    <svg
+     x-cloak
+     class="h-8 w-8"
+     :class="{ 'block': open, 'hidden': !(open) }"
+     xmlns="http://www.w3.org/2000/svg"
+     fill="currentColor"
+     viewBox="0 0 24 24"
+     aria-hidden="true"
+    >
+     <path
+      d="M12.0007 10.5865L16.9504 5.63672L18.3646 7.05093L13.4149 12.0007L18.3646 16.9504L16.9504 18.3646L12.0007 13.4149L7.05093 18.3646L5.63672 16.9504L10.5865 12.0007L5.63672 7.05093L7.05093 5.63672L12.0007 10.5865Z"
+     ></path>
+    </svg>
+   </button>
   </div>
+ </div>
 
-  <!-- Menu content -->
-  <div
-    class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8"
-    id="website-menu"
-    x-cloak
-    x-show="open"
-    x-collapse
-    x-collapse.duration.500ms
-  >
-    <div class="grid grid-cols-1 gap-16 pb-8 pt-6 lg:grid-cols-2 lg:pb-12 lg:pt-12">
-      <div
-        class="hidden items-center justify-center rounded-3xl bg-primary-500/10 px-6 py-8 dark:bg-primary-400/10 lg:flex"
+ <!-- Menu content -->
+ <div
+  class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8"
+  id="website-menu"
+  x-cloak
+  x-show="open"
+  x-collapse
+  x-collapse.duration.500ms
+ >
+  <div class="grid grid-cols-1 gap-16 pb-8 pt-6 lg:grid-cols-2 lg:pb-12 lg:pt-12">
+   <div
+    class="hidden items-center justify-center rounded-3xl bg-primary-500/10 px-6 py-8 dark:bg-primary-400/10 lg:flex"
+   >
+    <img
+     class="w-48 sm:w-80"
+     :src="$store.theme.isDark ? 'assets/change-is-here-dark.png' : 'assets/change-is-here.png'"
+     alt="Change is here"
+    />
+   </div>
+
+   <!-- Navigation -->
+   <nav class="flex flex-col gap-1 divide-y divide-primary-900/10 dark:divide-primary-300/10">
+    {
+     links.map((link) => (
+      <a
+       href={link.href}
+       class="group inline-flex py-4 text-xl font-medium tracking-tight text-primary-950 transition focus-visible:outline-none dark:text-primary-200 sm:py-6 sm:text-2xl"
       >
-        <img
-          class="w-48 sm:w-80"
-          :src="$store.theme.isDark ? 'assets/change-is-here-dark.png' : 'assets/change-is-here.png'"
-          alt="Change is here"
-        />
-      </div>
-
-      <!-- Navigation -->
-      <nav class="flex flex-col gap-1 divide-y divide-primary-900/10 dark:divide-primary-300/10">
-        {
-          links.map((link) => (
-            <a
-              href={link.href}
-              class="group inline-flex py-4 text-xl font-medium tracking-tight text-primary-950 transition focus-visible:outline-none dark:text-primary-200 sm:py-6 sm:text-2xl"
-            >
-              <div class="flex flex-1 items-center justify-between rounded-3xl group-focus-visible:outline group-focus-visible:outline-2 group-focus-visible:outline-offset-2 group-focus-visible:outline-primary-950 dark:group-focus-visible:outline-primary-200">
-                <div class="flex items-center gap-6">
-                  <span class="text-xs">{link.ref}</span>
-                  <span class="group-hover:underline">{link.name}</span>
-                </div>
-              </div>
-            </a>
-          ))
-        }
-      </nav>
-    </div>
+       <div class="flex flex-1 items-center justify-between rounded-3xl group-focus-visible:outline group-focus-visible:outline-2 group-focus-visible:outline-offset-2 group-focus-visible:outline-primary-950 dark:group-focus-visible:outline-primary-200">
+        <div class="flex items-center gap-6">
+         <span class="text-xs">{link.ref}</span>
+         <span class="group-hover:underline">{link.name}</span>
+        </div>
+       </div>
+      </a>
+     ))
+    }
+   </nav>
   </div>
+ </div>
 </header>
 
 <style>
-  /* .header-group {
+ /* .header-group {
     position: sticky;
     top: 0;
     z-index: 10;
