--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -42,11 +42,7 @@ const links = [
     class="rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-primary-950 dark:group-focus-visible:outline-primary-200"
    >
     <span class="sr-only">Logo</span>
-    <img
-     class="w-14 sm:w-24"
-     :src="$store.theme.isDark ? '/assets/logo-inverted.webp' : '/assets/logo.webp'"
-     alt="Reflair logo"
-    />
+    <img class="w-14 sm:w-24" src="/assets/logo-inverted.webp" alt="Reflair logo" />
    </a>
   </div>
 
