--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -96,7 +96,7 @@ const { description, title } = Astro.props;
       if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
        return true;
       }
-      return false;
+      return true;
      })();
     },
 
