Fixed the reviews and the services page

--- a/src/components/home/FlairInjections.astro
+++ b/src/components/home/FlairInjections.astro
@@ -3,18 +3,18 @@
   <div class="grid gap-12 sm:gap-28 lg:grid-cols-2">
    <div class="flex flex-col items-start gap-4 sm:gap-6 lg:col-span-1">
     <h2 class="text-3xl font-medium tracking-tight sm:text-5xl">Flair Injections</h2>
-    <p class="text-lg text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
+    <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
      These consultations provide practical information, honest recommendations and loads of
      inspiration to make any interior feel fresh and updated again. If a site visit isn't possible
      and the communication needs to take place via e-mail or WhatsApp ... no problem! We would
      however need high-quality photos from all angles, as well as measurements and/or building
      plans, in order for us to provide the best possible feedback.
     </p>
-    <p class="text-lg text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
+    <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
      The objectives of Flair Injection Consultations are:
     </p>
 
-    <ul class="list-inside list-disc text-base sm:text-xl">
+    <ul class="list-inside list-disc text-lg sm:text-xl">
      <li class="my-4 text-primary-950/70 dark:text-primary-200/70 sm:ms-8">
       To resonate with a client's taste and style. I take into consideration what makes them happy
       as I am of the opinion that our belongings restores our memories and connects us with others
@@ -33,7 +33,7 @@
       be empowered to undertake renovations by themselves.
      </li>
     </ul>
-    <p class="text-lg text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
+    <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
      I would love to assist you to reFlair your home!
     </p>
    </div>
