--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -3,7 +3,7 @@
   <div class="grid gap-12 sm:gap-28 lg:grid-cols-2">
    <div class="flex flex-col items-start gap-8 sm:gap-10 lg:col-span-1">
     <h2 class="text-3xl font-medium tracking-tight sm:text-5xl">About Us</h2>
-    <p class="text-lg text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
+    <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
      Thanks to social media and the internet, I believe most of us are influenced and educated to
      such an extent that we are able to make well-informed choices when it comes to furnishing our
      spaces. Therefore the question, why consult an interior designer? I see my purpose as listening
@@ -18,7 +18,7 @@
     </p>
     <a
      href="/about"
-     class="text-md inline-flex items-center justify-center rounded-full border border-transparent bg-primary-600 px-5 py-3 font-medium text-white transition hover:bg-primary-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600 dark:bg-primary-400 dark:text-primary-950 dark:hover:bg-primary-300 dark:focus-visible:outline-primary-400"
+     class="inline-flex items-center justify-center rounded-full border border-transparent bg-primary-600 px-5 py-3 text-lg font-medium text-white transition hover:bg-primary-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600 dark:bg-primary-400 dark:text-primary-950 dark:hover:bg-primary-300 dark:focus-visible:outline-primary-400"
     >
      Read about us
     </a>
