--- a/src/components/home/MeetMia.astro
+++ b/src/components/home/MeetMia.astro
@@ -8,7 +8,7 @@
     class="order-first flex flex-col items-start justify-center gap-12 sm:gap-10 lg:order-last lg:col-span-1"
    >
     <h2 class="text-3xl font-medium tracking-tight sm:text-5xl">Meet Mia</h2>
-    <p class="text-lg text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
+    <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
      My name is Mia Lambrechts and reFlair Interiors is my business and passion. I have been blessed
      and fortunate to turn my passion for beautiful interiors into a profession, as l believe that
      being able to find serenity and comfort in one's home is a crucial factor in quality of life.
