--- a/src/components/home/Testimonials.astro
+++ b/src/components/home/Testimonials.astro
@@ -1,24 +1,34 @@
 ---
 const testimonials = [
  {
-  name: 'Ilze',
-  description:
-   'Renovation, Decor and Accessories, Wall Treatments, Flooring, Lighting, Room Layout, Upholstery',
-  message:
-   '“Mia, thank you so much for what you have done to give the house a new life. You have done more than what we could have imagined. Thank you for dreaming together and getting every detail right and merging our styles and tastes. It feels like home! Thank you!”',
- },
- {
-  name: 'Suzette Bester',
-  description: 'Decor and Accessories',
-  message:
-   '“Mia takes your own personality and taste into account and works with what she has at her disposal. She is an angel and an asset to anyone who wants to bring some fresh ideas into their home. Thank you very much Mia for what you have meant to me! Looking forward to working together again.”',
- },
- {
-  name: 'Tracy Grimm',
-  description: 'Decor and Accessories, Window Treatments, Soft Furnishing, Room Layout',
+  name: 'Anita van Niekerk',
 
   message:
-   '“Friendly, helpful assistance and guidance! Goes the extra mile. Quick to respond. Positive attitude. Easy to work with! No regrets on purchases.”',
+   '“Mia has helped me on many occassions, in instances where I thought there was nothing to do. She is insanely creative and has numerous industrious ideas. She has also assisted me on short notice with good quality reasonably priced productions. I would (and have) recommend her to anyone!”',
+ },
+ {
+  name: 'Adriaan & Dee Beukes',
+
+  message:
+   '“Mia was excellent at understanding our requirements, we are so happy with the new look of our home!”',
+ },
+ {
+  name: 'Michelle Janse van Rensburg',
+
+  message:
+   '“My interior decorator Mia was absolutely fantastic! She had a keen eye for design and understood my vision perfectly. She was able to transform my space into something truly remarkable. The attention to detail and creativity she brought to the project was outstanding. She was prompt, professional, and a pleasure to work with. I highly recommend her to anyone looking for a talented and dedicated interior decorator.”',
+ },
+ {
+  name: 'Lucia Grotius',
+
+  message:
+   '“I contacted Mia at ReFlair some time ago to assist with redecorating my bedroom. Mia has a special sence of flair, affinity for beautiful fabrics and textiles and the knowledge to bring everything together.Mia assisted me again in creating our very special winter room that was not an easy task. She knows how to source furniture and accessories to complete a beautiful outcome. Thank you Mia@ReFlair- I will always be thankful for your assistance and professionalism”',
+ },
+ {
+  name: 'Marina de Villiers',
+
+  message:
+   '“What a pleasure to work with Mia - not only is she knowledgeable but she honours appointments and installation deadlines. What a rare find in this industry!”',
  },
 ];
 ---
@@ -48,12 +58,12 @@ const testimonials = [
          </svg>
         ))}
        </div>
-       <blockquote class="text-center text-lg italic leading-loose text-primary-950/70 dark:text-primary-200/70">
+       <blockquote class="text-center text-xl italic leading-loose text-primary-950/70 dark:text-primary-200/70">
         <p>{testimonial.message}</p>
        </blockquote>
        <figcaption class="flex flex-col gap-4">
         <div class="text-center">
-         <div class="text-base font-medium">{testimonial.name}</div>
+         <div class="text-lg font-medium">{testimonial.name}</div>
         </div>
        </figcaption>
       </figure>
