--- a/src/components/home/Testimonials.astro
+++ b/src/components/home/Testimonials.astro
@@ -30,6 +30,24 @@ const testimonials = [
   message:
    '“What a pleasure to work with Mia - not only is she knowledgeable but she honours appointments and installation deadlines. What a rare find in this industry!”',
  },
+ {
+  name: 'Buzz Leuner',
+
+  message:
+   '“Mia delivers a professional experience, good planning, good taste, thorough sourcing, frequent consultation with the client and always in budget. A pleasure to work with.”',
+ },
+ {
+  name: 'Lana Leuner',
+
+  message:
+   '“Always so exciting to work with Mia knowing that The Sky is the Limit. Mia has The know how. The artistic flair.The engineering ability. The Honesty. The ability to deliver. This is teamwork.Thank you Mia for always making every project very exciting! Looking forward to August  2024 for our next one!”',
+ },
+ {
+  name: 'Elsabé Hanekom',
+
+  message:
+   '“Exceptional service, no matter how small the project. Mia’s valuable knowledge and pragmatic suggestions assisted our decision making with great results!”',
+ },
 ];
 ---
 
@@ -44,7 +62,7 @@ const testimonials = [
    >
     {
      testimonials.map((testimonial) => (
-      <figure class="mx-auto flex max-w-lg flex-col items-center gap-6 py-8 lg:px-8 lg:py-0">
+      <figure class="mx-auto flex max-w-lg flex-col items-center gap-2 py-8 lg:px-8 lg:py-4">
        <div class="flex flex-row gap-2">
         {[...Array(3)].map(() => (
          <svg
@@ -58,7 +76,7 @@ const testimonials = [
          </svg>
         ))}
        </div>
-       <blockquote class="text-center text-xl italic leading-loose text-primary-950/70 dark:text-primary-200/70">
+       <blockquote class="text-center text-xl italic text-primary-950/70 dark:text-primary-200/70">
         <p>{testimonial.message}</p>
        </blockquote>
        <figcaption class="flex flex-col gap-4">
