Added see more testimonials functionality

--- a/src/components/about/Mission.astro
+++ b/src/components/about/Mission.astro
@@ -20,7 +20,7 @@ const stats = [
 ---
 
 <section class="py-6 sm:py-6">
- <div class="max-2-6xl mx-auto sm:px-6 lg:px-12">
+ <div class="mx-auto max-w-7xl sm:px-6 lg:px-12">
   <img
    class="mx-auto h-auto w-full max-w-7xl rounded-3xl"
    src="/assets/mia_at_the_desk.jpg"
@@ -52,17 +52,17 @@ const stats = [
     home.
    </p>
   </div>
- </div>
 
- <!-- Stats -->
- <dl class="grid grid-cols-1 gap-6 px-6 sm:grid-cols-2">
-  {
-   stats.map((stat) => (
-    <div class=" rounded-3xl border border-primary-900/10 p-6 text-center dark:border-primary-300/10">
-     <dt class="text-base">{stat.name}</dt>
-     <dd class="text-3xl font-medium tracking-tight">{stat.value}</dd>
-    </div>
-   ))
-  }
- </dl>
+  <!-- Stats -->
+  <dl class="grid grid-cols-1 gap-6 px-6 sm:grid-cols-2">
+   {
+    stats.map((stat) => (
+     <div class=" rounded-3xl border border-primary-900/10 p-6 text-center dark:border-primary-300/10">
+      <dt class="text-base">{stat.name}</dt>
+      <dd class="text-3xl font-medium tracking-tight">{stat.value}</dd>
+     </div>
+    ))
+   }
+  </dl>
+ </div>
 </section>
